WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267849
scrollable overflow does not account for alignment (align-content/justify-content)
https://bugs.webkit.org/show_bug.cgi?id=267849
Summary
scrollable overflow does not account for alignment (align-content/justify-con...
fantasai
Reported
2024-01-22 04:20:14 PST
Created
attachment 469496
[details]
flexbox testcase showing clipped content Overflowing content gets clipped and is inaccessible to the user when the content of a flexbox or grid scroll container is centered or aligned to the end with 'align-content' or 'justify-content'. Spec link:
https://www.w3.org/TR/css-align-3/#overflow-scroll-position
Attachments
flexbox testcase showing clipped content
(2.04 KB, text/html)
2024-01-22 04:20 PST
,
fantasai
no flags
Details
comprehensive block container testcase
(19.21 KB, text/html)
2024-01-22 18:40 PST
,
fantasai
no flags
Details
flexbox testcase showing clipped content
(2.11 KB, text/html)
2024-01-22 18:43 PST
,
fantasai
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-22 04:20:21 PST
<
rdar://problem/121366949
>
fantasai
Comment 2
2024-01-22 18:40:16 PST
Created
attachment 469509
[details]
comprehensive block container testcase
fantasai
Comment 3
2024-01-22 18:43:42 PST
Created
attachment 469510
[details]
flexbox testcase showing clipped content (Updating test to add base href, so hopefully it links to the wpt resources properly.)
fantasai
Comment 4
2024-01-26 00:22:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23038
EWS
Comment 5
2024-01-30 04:52:37 PST
Committed
273737@main
(3000bc1bca1c): <
https://commits.webkit.org/273737@main
> Reviewed commits have been landed. Closing PR #23038 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug